force-app/main/default/objects/Trigger_Handler__mdt/fields/Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Execution_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The order in which this class should be executed.  For records with the same Execution Order, the execution will occur alphabetically by class name.</description>
    <inlineHelpText>The order in which this class should be executed.  For records with the same Execution Order, the execution will occur alphabetically by class name.</inlineHelpText>
    <label>Execution Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>