force-app/main/default/objects/Trigger_Handler__mdt/fields/Handler_Class__c.field-meta.xml
<CustomField>
    <fullName>Handler_Class__c</fullName>
    <description>The name of the Apex Class implementing the ITriggerHandler interface</description>
    <inlineHelpText>The name of the Apex Class implementing the ITriggerHandler interface</inlineHelpText>
    <label>Handler Class</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>