force-app/main/default/objects/Trigger_Handler__mdt/fields/Trigger_Setting__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Setting__c</fullName>
    <label>Trigger Setting</label>
    <referenceTo>Trigger_Setting__mdt</referenceTo>
    <relationshipLabel>Trigger Handler</relationshipLabel>
    <relationshipName>Trigger_Handler</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>